fixed upload modal on smaller screen sizes

--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -138,8 +138,8 @@
 }
 .uploaded-modal-stuff {
     display: flex;
-    margin-left: -715px;
-    margin-top: -346px;
+    /* margin-left: -715px; */
+    /* margin-top: -346px; */
     padding: 0;
     /* width: 600%; */
     /* height: 500px; */
@@ -155,7 +155,7 @@
     background: #f7f8fa;
     width: 93%;
     height: 90%;
-    display: flex;
+    /* display: flex; */
     justify-content: center;
     align-items: center;
 }
@@ -181,16 +181,16 @@
     /* margin-left: -10px; */
     /* margin-left: 400px; */
     top: 0;
-    right: 30px;
+    right: 4px;
     height: 100%;
-    width: 20%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
+    width: 24%;
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* align-items: flex-start; */
+    /* justify-content: flex-start; */
 }
 .upload-modal-list-btn {
-    padding: 2% 4% 7% 8%;
+    padding: 2% 2% 6% 2%;
     border-top: 1px solid rgba(185,193,199,0.5);
     color: whitesmoke;
     font-weight: 500;
@@ -203,9 +203,11 @@
     border: 0.5px solid #0099e5;
     border-radius: 2%;
     width: 200px;
-    margin-left: 40px;
     font-size: 24px;
+    margin: auto;
     margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
 
 }
 .upload-modal-list-btn:hover {
@@ -226,7 +228,7 @@
     margin-bottom: 20px;
 }
 .title-input {
-    width: 291px;
+    width: 90%;
     border: 1px solid rgb(71, 71, 71);
     border-radius: 1%;
     height: 50px;
@@ -237,7 +239,7 @@
 
 }
 .modal-desc-btn {
-    width: 291px;
+    width: 90%;
     border: 1px solid rgb(71, 71, 71);
     border-radius: 2%;
     height: 150px;
